[package]
description = "A Discord bot, written in Rust, that generates responses using any language model supported by `llm`."
edition = "2021"
license = "GPL-3.0-only"
name = "llmcord"
repository = "https://github.com/rustformers/llmcord"
version = "0.2.0"

[dependencies]
anyhow = "1.0.66"
flume = "0.10"
rand = "0.8.5"
serde = {version = "1.0.150", features = ["derive"]}
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"]}
tokio = {version = "1.0", features = ["full"]}
toml = "0.7.3"
indoc = "2.0.1"

llm = { git = "https://github.com/rustformers/llm.git", rev = "e011ce8f8a53b4fe55cc030b216f91625efe46d7" }